--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="http://www.github.com/sachin0987" /> 
+	<link rel="author" href="" /> 
     <meta name="keywords" content="Birthday, Happy">
     <meta property="og:type" content="E-Greeting" />
     <meta property="og:image" content="favicon.ico" />
@@ -99,9 +99,9 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>Today is...</p>
-				<p>your message </p>
+				<p>your 19th birthday</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Shafrina</p>
+				<p>a very happy birthday Shafrina Maulidiah</p>
 				
 			</div>
 		</div>
